# organize-photos

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yaml
organize_photos/: __main__.py
src/organize_photos/: __main__.py  cli.py  constants.py  processing.py  template_backport.py
src/typings/piexif/: __init__.pyi  _exif.pyi
tests/: conftest.py  test_integration.py  utils.py
tests/resources/: valid_dirtree_recipe.json
tests/unit/: test_template.py
